<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SINOA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bem_vindo">Bem-vindo ao SINOA, um sistema de notificações acadêmicas da UFG</string>
    <string name="title_activity_tela_usuario">TelaUsuario</string>
    <string name="login">Fazer Login</string>
    <string name="noticias_publicas">Notícias Públicas</string>
    <string name="matricula">Matrícula</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_exibe_noticia">ExibeNoticia</string>
    <string name="remetente">Remetente</string>
    <string name="data">Data</string>
    <string name="texto">Texto</string>
    <string name="sample_date">01/01/2014</string>
    <string name="sample_sender">Reitoria</string>
    <string name="mensagem">Mensagem</string>
    <string name="notificacoes">Notificações</string>
    <string name="notas">Notas e Frequências</string>
    <string name="avisos_biblioteca">Avisos da Biblioteca</string>
    <string name="comunicados">Comunicados</string>
    <string name="configuracoes">Configurações</string>
    <string name="titulo">Título</string>
    <string name="title_activity_tela_visitante">Visitante</string>
    <string name="visitante">Acessar como Visitante</string>
    <string name="ordenar_por_remetente">Ordenar por Remetente</string>
    <string name="ordenar_por_data">Ordenar por Data</string>
    <string name="ascendente">Ascendente</string>
    <string name="descendente">Descendente</string>
    <string name="status">Status</string>
    <string name="marcar_nao_lida">Marcar como não lida</string>
    <string name="marcar_lida">Marcar como lida</string>
    <string name="disciplinas">Ver por Disciplinas</string>
    <string name="title_activity_tela_disciplinas">Disciplinas Matriculadas</string>
    <string name="title_activity_tela_configuracoes">TelaConfiguracoes</string>
    <string name="origem_remetentes">Origem dos Remetentes</string>
    <string name="logout">Logout</string>
    <string name="title_activity_tela_remetentes">TelaRemetentes</string>
    <string name="selecionar_remetentes">Selecione os remetentes que você deseja receber notificações</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="ok">OK</string>
    <string name="excluir">Excluir notificação</string>
    <string name="sair">Sair</string>

</resources>
