<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutScrollViewUsuario"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp" >

    <LinearLayout
        android:id="@+id/layoutTelaUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="br.ufg.inf.es.sinoa.ui.activity.TelaUsuario"
        tools:ignore="MergeRootFrame" >

        <ImageView
            android:id="@+id/imageViewStatus"
            android:layout_width="240dp"
            android:layout_height="100dp"
            android:contentDescription="@null"
            android:src="@drawable/sinoa_tela_usuario" />

        <TextView
            android:id="@+id/textViewBemVindoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bem_vindo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/notificacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/notificacoes"
            android:onClick="iniciaTelaNotificacoes" />

        <Button
            android:id="@+id/notas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/notas"
            android:onClick="iniciaTelaNotas" />

        <Button
            android:id="@+id/avisos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/avisos_biblioteca"
            android:onClick="iniciaTelaAvisosBiblioteca" />

        <Button
            android:id="@+id/disciplinas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/disciplinas"
            android:onClick="iniciaTelaDisciplinas" />

        <Button
            android:id="@+id/configuracoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/configuracoes"
            android:onClick="iniciaConfiguracoes" />
    </LinearLayout>

</ScrollView>