<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp" >

    <LinearLayout
        android:id="@+id/disciplinas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="br.ufg.inf.es.sinoa.MainActivity"
        tools:ignore="MergeRootFrame" >

        <ImageView
            android:id="@+id/logoUfg"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:contentDescription="@null"
            android:src="@drawable/sinoa_logo_com_sino_sem_fundo" />

        <TextView
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/bem_vindo" />

        <Button
            android:id="@+id/botaoVisitante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:onClick="iniciaTelaVisitante"
            android:text="@string/visitante" />

        <Button
            android:id="@+id/botaoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:onClick="iniciaTelaLogin"
            android:text="@string/login" />
    </LinearLayout>

</ScrollView>
